🙎🏖 Checkpoint ./index.html:31916058/1339

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Saksham Shekher - Student | Developer !</title>
-    <meta name="description" content="Saksham Shekher - Student | Developer I am a collage student and I am a also developer from the Mumbai, I like create something new !!">
-    <meta name="author" content="Saksham Shekher">
-    <meta name="copyright" content="This Created by Saksham Shekher">
+    <title>Duck Dev | Developing for the future</title>
+    <meta name="description" content="I am a 15 year old teen with coding skills. Created and API, 2 discord bots, websites.">
+    <meta name="author" content="Server Developer">
+    <meta name="copyright" content="(C) Duck Dev">
     <meta name="robots" content="all" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
@@ -103,28 +103,27 @@
                     <img src="images/avatar-1.svg" alt="Avishkar Patil" class="mb-4" />
 
                     <!-- info -->
-                    <h1 class="mb-2 mt-0">Saksham</h1>
-                    <span>I'm a <span class="text-rotating">Collage Student, Computer Lover, Web Developer</span></span>
+                    <h1 class="mb-2 mt-0">Duck Dev</h1>
+                    <span>I'm a <span class="text-rotating">duck., developer., </span></span>
 
                     <!-- social icons -->
                     <ul class="social-icons light list-inline mb-0 mt-4">
-			<li class="list-inline-item"><a href="https://www.instagram.com/kvs_saksham/"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
-			<li class="list-inline-item"><a href="https://t.me/PurityWasHere"><i class="fab fa-telegram" aria-hidden="true"></i></a></li>
-                        <li class="list-inline-item"><a href="https://www.linkedin.com/in/puritywashere"><i class="fab fa-linkedin" aria-hidden"true"></i></a></li>
-                        <li class="list-inline-item"><a href="https://github.com/Oshekher"><i class="fab fa-github" aria-hidden="true"></i></a></li>
-                        <li class="list-inline-item"><a href="https://facebook.com/saksham729"><i class="fab fa-facebook" aria-hidden"true"></i></a></li>
+			<li class="list-inline-item"><a href="https://www.npmjs.com/~serverdeveloper9447"><i class="fab fa-npm" aria-hidden="true"></i></a></li>
+			<li class="list-inline-item"><a href="https://twitter.com/Soumalyaplayz"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
+                        <li class="list-inline-item"><a href="https://github.com/ServerDeveloper9447"><i class="fab fa-github" aria-hidden="true"></i></a></li>
+                        <li class="list-inline-item"><a href="https://discord.gg/VqA92g8"><i class="fab fa-discord" aria-hidden"true"></i></a></li>
                     </ul>
 
                     <!-- buttons -->
                     <div class="mt-4">
-                        <a href="https://t.me/PurityWasHere" class="btn btn-default1" style="background-color: #6517ad;">Hire me</a>
+                        <a href="https://discord.gg/VqA92g8" class="btn btn-default1" style="background-color: #6517ad;">Join my Discord</a>
                     </div>
                 </div>
 
                 <!-- scroll down mouse wheel -->
                 <div class="scroll-down">
                     <a href="#about" class="mouse-wrapper">
-                        <span>Scroll Down</span>
+                        <span>Go down or SUS</span>
                         <span class="mouse">
 						<span class="wheel"></span>
                         </span>
@@ -167,7 +166,7 @@
             <div class="container">
 
                 <!-- section title -->
-                <h2 class="section-title wow fadeInUp">About Me</h2>
+                <h2 class="section-title wow fadeInUp">About Me The Legendary</h2>
 
                 <div class="spacer" data-height="60"></div>
 
@@ -186,7 +185,7 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <!-- about text -->
-                                    <p>I am Saksham Shekher, Student from Mumbai, India. I have rich experience in Web Developing.</p>
+                                    <p>I am Duck Dev aka Server Developer#9447. I develop bots, websites, APis and more.</p>
                                     <div class="mt-3">
                                         <a href="https://github.com/Oshekher/" class="btn btn-default">Hire Me</a>
                                     </div>
