🏥🏏 Checkpoint ./index.html:31916058/364

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                                     <!-- about text -->
                                     <p>I am Duck Dev aka Server Developer#9447. I develop bots, websites, APis and more.</p>
                                     <div class="mt-3">
-                                        <a href="https://github.com/Oshekher/" class="btn btn-default">Hire Me</a>
+                                        <a href="https://discord.gg/VqA92g8" class="btn btn-default">Join Me.</a>
                                     </div>
                                     <div class="spacer d-md-none d-lg-none" data-height="30"></div>
                                 </div>
@@ -195,11 +195,11 @@
                                     <!-- skill item -->
                                     <div class="skill-item">
                                         <div class="skill-info clearfix">
-                                            <h4 class="float-left mb-3 mt-0">Study and Prepration</h4>
-                                            <span class="float-right">95%</span>
+                                            <h4 class="float-left mb-3 mt-0">API fixation</h4>
+                                            <span class="float-right">69%</span>
                                         </div>
                                         <div class="progress">
-                                            <div class="progress-bar data-background" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="95" data-color="#FFD15C" style="background-color: #fbb034; background-image: linear-gradient(315deg, #ff9900 0%, #ffee20 74%);">
+                                            <div class="progress-bar data-background" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="69" data-color="#FF0000" style="background-color: #fbb034; background-image: linear-gradient(315deg, #ff9900 0%, #ffee20 74%);">
                                             </div>
                                         </div>
                                         <div class="spacer" data-height="20"></div>
@@ -208,11 +208,11 @@
                                     <!-- skill item -->
                                     <div class="skill-item">
                                         <div class="skill-info clearfix">
-                                            <h4 class="float-left mb-3 mt-0">Other Activites</h4>
-                                            <span class="float-right">80%</span>
+                                            <h4 class="float-left mb-3 mt-0">Discord Server Members</h4>
+                                            <span class="float-right">64%</span>
                                         </div>
                                         <div class="progress">
-                                            <div class="progress-bar data-background" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="80" data-color="#FF4C60" style="background-color: #bf033b; background-image: linear-gradient(315deg, #ca2858 0%, #ff6319 74%);">
+                                            <div class="progress-bar data-background" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="64" data-color="#F47FFF" style="background-color: #bf033b; background-image: linear-gradient(315deg, #ca2858 0%, #ff6319 74%);">
                                             </div>
                                         </div>
                                         <div class="spacer" data-height="20"></div>
@@ -221,7 +221,7 @@
                                     <!-- skill item -->
                                     <div class="skill-item">
                                         <div class="skill-info clearfix">
-                                            <h4 class="float-left mb-3 mt-0">Collage Life</h4>
+                                            <h4 class="float-left mb-3 mt-0">Discord Bot Fixing</h4>
                                             <span class="float-right">95%</span>
                                         </div>
                                         <div class="progress">
@@ -246,8 +246,8 @@
                         <div class="fact-item">
                             <span class="icon icon-fire"></span>
                             <div class="details">
-                                <h3 class="mb-0 mt-0 number"><em class="count">100</em>%</h3>
-                                <p class="mb-0">Performance</p>
+                                <h3 class="mb-0 mt-0 number"><em class="count">101</em>%</h3>
+                                <p class="mb-0">Moderation</p>
                             </div>
                         </div>
                         <div class="spacer d-md-none d-lg-none" data-height="30"></div>
@@ -260,7 +260,7 @@
                         <div class="fact-item">
                             <span class="icon icon-people"></span>
                             <div class="details">
-                                <h3 class="mb-0 mt-0 number"><em class="count">10</em>+</h3>
+                                <h3 class="mb-0 mt-0 number"><em class="count">100</em>+</h3>
                                 <p class="mb-0">Friends</p>
                             </div>
                         </div>
@@ -270,10 +270,10 @@
                     <div class="col-md-3 col-sm-6">
                         <!-- fact item -->
                         <div class="fact-item">
-                            <span class="icon icon-badge"></span>
+                            <span class="icon icon-plus"></span>
                             <div class="details">
-                                <h3 class="mb-0 mt-0 number"><em class="count">10</em></h3>
-                                <p class="mb-0">Certificates</p>
+                                <h3 class="mb-0 mt-0 number"><em class="count">97.5</em>%</h3>
+                                <p class="mb-0">Positive Reviews</p>
                             </div>
                         </div>
                     </div>
