--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             <div class="container">
 
                 <!-- section title -->
-                <h2 class="section-title wow fadeInUp">Services</h2>
+                <h2 class="section-title wow fadeInUp">Projects</h2>
 
                 <div class="spacer" data-height="60"></div>
 
@@ -299,10 +299,10 @@
 
                     <div class="col-md-4">
                         <!-- service box -->
-                        <div class="service-box rounded data-background padding-30 text-center text-light shadow-pink" data-color="#F97B8B">
-                            <img src="images/studyp.svg" width="85px" alt="Study Performance" />
-                            <h3 class="mb-3 mt-0" style="color: #010101;">Study Performance</h3>
-                            <p class="mb-0" style="color: #010101;">I am studying in mumbai and I am prepraing for BBA-IT. </p>                            
+                        <div class="service-box rounded data-background padding-30 text-center text-light shadow-pink" data-color="#4ED5F2">
+                            <img src="images/vscode.svg" width="85px" alt="code" />
+                            <h3 class="mb-3 mt-0" style="color: #de5833;">CraftBlur Family</h3>
+                          <p class="mb-0" style="color: #010101;">CraftBlur Family has 2 bots. CraftBlur and CraftBlur Music. <a href="https://www.craftblurbot.cf" target="_blank">Invite them now</a></p>                            
                         </div>
                         <div class="spacer d-md-none d-lg-none" data-height="30"></div>
                     </div>
@@ -311,7 +311,7 @@
                     <div class="col-md-4">
                         <!-- service box -->
                         <div class="service-box rounded data-background padding-30 text-center text-light shadow-blue" data-color="#6C6CE5">
-                            <img src="images/collagelife.svg" width="85px" alt="Collage Life" />
+                            <img src="images/js.svg" width="85px" alt="npm wrapper" />
                             <h3 class="mb-3 mt-0" style="color: #010101;">Collage Life</h3>
                             <p class="mb-0" style="color: #010101;">Collage is First Step of life where we in free world and learn new things with knowledge.</p>
                         </div>
