--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                         <!-- service box -->
                         <div class="service-box rounded data-background padding-30 text-center text-light shadow-blue" data-color="#6C6CE5">
                             <img src="images/js.svg" width="85px" alt="npm wrapper" />
-                            <h3 class="mb-3 mt-0" style="color: #010101;">Collage Life</h3>
+                            <h3 class="mb-3 mt-0" style="color: #010101;">API</h3>
                             <p class="mb-0" style="color: #010101;">Collage is First Step of life where we in free world and learn new things with knowledge.</p>
                         </div>
                         <div class="spacer d-md-none d-lg-none" data-height="30"></div>
@@ -322,7 +322,7 @@
                     <div class="col-md-4">
                         <!-- service box -->
                         <div class="service-box rounded data-background padding-30 text-center shadow-yellow" data-color="#F9D74C">
-                            <img src="images/service-2.svg" alt="Web Development" />
+                            <img src="images/htmlsvg" alt="Web Development" />
                             <h3 class="mb-3 mt-0" style="color: #010101;">Web Development</h3>
                             <p class="mb-0" style="color: #010101;">I love Web developing since I was 14 Y/O My favourite is HTML Then CSS.</p>
                         </div>
