--- a/index.html
+++ b/index.html
@@ -301,8 +301,8 @@
                         <!-- service box -->
                         <div class="service-box rounded data-background padding-30 text-center text-light shadow-pink" data-color="#4ED5F2">
                             <img src="images/vscode.svg" width="85px" alt="code" />
-                            <h3 class="mb-3 mt-0" style="color: #de5833;">CraftBlur Family</h3>
-                          <p class="mb-0" style="color: #010101;">CraftBlur Family has 2 bots. CraftBlur and CraftBlur Music. <a href="https://www.craftblurbot.cf" target="_blank">Invite them now</a></p>                            
+                          <h3 class="mb-3 mt-0" style="color: #de5833;"><a href="https://www.craftblurbot.cf" target="_blank">CraftBlur Family</a></h3>
+                          <p class="mb-0" style="color: #010101;">CraftBlur Family has 2 bots. CraftBlur and CraftBlur Music.</a></p>                            
                         </div>
                         <div class="spacer d-md-none d-lg-none" data-height="30"></div>
                     </div>
@@ -322,7 +322,7 @@
                     <div class="col-md-4">
                         <!-- service box -->
                         <div class="service-box rounded data-background padding-30 text-center shadow-yellow" data-color="#F9D74C">
-                            <img src="images/htmlsvg" alt="Web Development" />
+                            <img src="images/html.svg" alt="Web Development"/>
                             <h3 class="mb-3 mt-0" style="color: #010101;">Web Development</h3>
                             <p class="mb-0" style="color: #010101;">I love Web developing since I was 14 Y/O My favourite is HTML Then CSS.</p>
                         </div>
