--- a/index.html
+++ b/index.html
@@ -312,8 +312,8 @@
                         <!-- service box -->
                         <div class="service-box rounded data-background padding-30 text-center text-light shadow-blue" data-color="#6C6CE5">
                             <img src="images/js.svg" width="85px" alt="npm wrapper" />
-                            <h3 class="mb-3 mt-0" style="color: #010101;">API</h3>
-                            <p class="mb-0" style="color: #010101;">Collage is First Step of life where we in free world and learn new things with knowledge.</p>
+                            <h3 class="mb-3 mt-0" style="color: #CC0000;"><a href="https://api.spapi.ga" target="_blank">API</a></h3>
+                            <p class="mb-0" style="color: #010101;">Making a advanced API throught Javascript is probably my first step towards being a full stack dev.</p>
                         </div>
                         <div class="spacer d-md-none d-lg-none" data-height="30"></div>
                     </div>
@@ -324,14 +324,14 @@
                         <div class="service-box rounded data-background padding-30 text-center shadow-yellow" data-color="#F9D74C">
                             <img src="images/html.svg" alt="Web Development"/>
                             <h3 class="mb-3 mt-0" style="color: #010101;">Web Development</h3>
-                            <p class="mb-0" style="color: #010101;">I love Web developing since I was 14 Y/O My favourite is HTML Then CSS.</p>
+                            <p class="mb-0" style="color: #010101;">I love Web developing since I was 13. I love HTML and CSS. I am thinking of being more advanced by learning SCSS.</p>
                         </div>
                     </div>
 
                 </div>
 
                 <div class="mt-5 text-center">
-                    <p class="mb-0">You want friendship with me ? <a href="https://t.me/PurityWasHere" style="color: #13f14d;">Click here</a> to Message me! 👋</p>
+                    <p class="mb-0">You want friendship with me ? <a href="https://discord.com/users/588336437011939341" style="color: #13f14d;">Click here</a> to Message me! 👋</p>
                 </div>
 
             </div>
@@ -344,7 +344,7 @@
             <div class="container">
 
                 <!-- section title -->
-                <h2 class="section-title wow fadeInUp">Experience</h2>
+                <h2 class="section-title wow fadeInUp">Life is HARD!!1!</h2>
 
                 <div class="spacer" data-height="60"></div>
 
@@ -360,7 +360,7 @@
                                 <div class="content">
                                     <span class="time">2021 - Present</span>
                                     <h3 class="title">Higher Secondary</h3>
-                                    <p>I am now in collage with group of Commerce Students.</p>
+                                    <p>I will give board exams in 2022. Prepairing for that.</p>
                                 </div>
                             </div>
 
@@ -369,7 +369,7 @@
                                 <div class="content">
                                     <span class="time">2019 - Past</span>
                                     <h3 class="title">Secondary School</h3>
-                                    <p>I Have completed Secondary School Certificate Examination in March 2020 with 65% Marks</p>
+                                    <p>This COVID made schools closed. :(</p>
                                 </div>
                             </div>
 
@@ -378,7 +378,7 @@
                                 <div class="content">
                                     <span class="time">Before 2019</span>
                                     <h3 class="title">Happy Life</h3>
-                                    <p>I am learning with happiness as today as well as archiving my Target and Gole.</p>
+                                    <p>Happy coding happy life.</p>
                                 </div>
                             </div>
 
@@ -392,37 +392,37 @@
                     <div class="col-md-6">
 
                         <!-- responsive spacer -->
-                        <div class="spacer d-md-none d-lg-none" data-height="30"></div>
+                       <!-- <div class="spacer d-md-none d-lg-none" data-height="30"></div> -->
 
                         <!-- timeline wrapper -->
-                        <div class="timeline exp bg-dark rounded shadow-dark padding-30 overflow-hidden">
+                       <!-- <div class="timeline exp bg-dark rounded shadow-dark padding-30 overflow-hidden"> -->
 
                             <!-- timeline item -->
-                            <div class="timeline-container wow fadeInUp">
+                           <!-- <div class="timeline-container wow fadeInUp">
                                 <div class="content">
                                     <span class="time">2021 - Future</span>
                                     <h3 class="title">Tomorrow</h3>
                                     <p>I will finlly solved this question and cleared soubt about this question .</p>
                                 </div>
-                            </div>
+                            </div> -->
 
                             <!-- timeline item -->
-                            <div class="timeline-container wow fadeInUp" data-wow-delay="0.2s">
+                           <!-- <div class="timeline-container wow fadeInUp" data-wow-delay="0.2s">
                                 <div class="content">
                                     <span class="time">2021 - Present</span>
                                     <h3 class="title">Today</h3>
                                     <p>I am now thinking about Yesterday Difficult Question and trying to solve this</p>
                                 </div>
-                            </div>
+                            </div> -->
 
                             <!-- timeline item -->
-                            <div class="timeline-container wow fadeInUp" data-wow-delay="0.4s">
+                            <!-- <div class="timeline-container wow fadeInUp" data-wow-delay="0.4s">
                                 <div class="content">
                                     <span class="time">2020 - Past</span>
                                     <h3 class="title">Yesterday</h3>
                                     <p>I have a doubt about a one question from the book and it is very difficult </p>
                                 </div>
-                            </div>
+                            </div> -->
 
                             <!-- main line -->
                             <span class="line"></span>
@@ -438,12 +438,12 @@
         </section>
 
         <!-- section blog -->
-        <section id="blog">
+       <!-- <section id="blog">
 
             <div class="container">
 
                 <!-- section title -->
-                <h2 class="section-title wow fadeInUp">Latest Projects</h2>
+               <!-- <h2 class="section-title wow fadeInUp">Latest Projects/h2>
 
                 <div class="spacer" data-height="60"></div>
 
