--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="copyright" content="(C) Duck Dev">
     <meta name="robots" content="all" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="https://cdn.glitch.me/2a4d780f-b9e8-4739-9886-831c1d5fcdb0%2Fhalloween%20overlay.png?v=1633416424642">
   
 
     <!-- STYLESHEETS -->
@@ -71,7 +71,7 @@
         <div class="container">
 
             <nav class="navbar navbar-expand-lg navbar-dark">
-                <a class="navbar-brand" href="index.html"><img src="images/logo.svg" alt="Saksham" width="150px" /></a> <button aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNavDropdown" data-toggle="collapse"
+                <a class="navbar-brand" href="#"><img src="images/logo.svg" alt="Saksham" width="150px" /></a> <button aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNavDropdown" data-toggle="collapse"
                     type="button"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav ml-auto scrollspy">
@@ -185,7 +185,7 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <!-- about text -->
-                                    <p>I am Duck Dev aka Server Developer#9447. I develop bots, websites, APis and more.</p>
+                                    <p>I am Duck Dev aka Server Developer#9447. I develop bots, websites, APIs and more.</p>
                                     <div class="mt-3">
                                         <a href="https://discord.gg/VqA92g8" class="btn btn-default">Join Me.</a>
                                     </div>
@@ -449,9 +449,9 @@
 
                 <div class="row blog-wrapper">
 
-                    <div class="col-md-4">
+                    <div class="col-md-4"> -->
                         <!-- blog item -->
-                        <div class="blog-item rounded bg-dark shadow-dark wow fadeIn">
+                        <!-- <div class="blog-item rounded bg-dark shadow-dark wow fadeIn">
                             <div class="thumb">
                                 <a href="https://github.com/Oshekher/BYR-Nav">
                                     <span class="category">Source Code</span>
@@ -470,9 +470,9 @@
                         </div>
                     </div>
 
-                    <div class="col-md-4">
+                    <div class="col-md-4"> -->
                         <!-- blog item -->
-                        <div class="blog-item rounded bg-dark shadow-dark wow fadeIn">
+                        <!-- <div class="blog-item rounded bg-dark shadow-dark wow fadeIn">
                             <div class="thumb">
                                 <a href="https://www.jiosaavn.ml/">
                                     <span class="category">Music</span>
@@ -491,9 +491,9 @@
                         </div>
                     </div>
 
-                    <div class="col-md-4">
+                    <div class="col-md-4"> -->
                         <!-- blog item -->
-                        <div class="blog-item rounded bg-dark shadow-dark wow fadeIn">
+                        <!-- <div class="blog-item rounded bg-dark shadow-dark wow fadeIn">
                             <div class="thumb">
                                 <a href="https://connectvip.online/en/">
                                     <span class="category">Educational</span>
@@ -520,7 +520,7 @@
 
 		    <div class="mt-5 text-center">
                     <p class="mb-0">You want friendship with me ? <a href="https://t.me/PurityWasHere" style="color: #13f14d;">Click here</a> to Message me! 👋</p>
-                </div>
+                </div> -->
 
         <!-- section contact -->
         <section id="contact">
@@ -537,17 +537,17 @@
                     <div class="col-md-4">
                         <!-- contact info -->
                         <div class="contact-info">
-                            <h3 class="wow fadeInUp">Let's talk about everything!</h3>
-                            <p class="wow fadeInUp">Send me an <a href="mailto:shekhersaksham@gmail.com">Email</a>. 👋</p>
-                            <li><b>Email :</b>&nbsp; <a href="mailto:shekhersaksham@gmail.com" style="color: #05caf7;">shekhersaksham@gmail.com</a></li>
-                            <li><b>Location : </b>&nbsp; <a href="https://t.me/PurityWasHere" style="color: #05caf7;"> Mumbai, IN</a></li>
+                            <h3 class="wow fadeInUp">Let's talk about coding!</h3>
+                            <p class="wow fadeInUp">Send me an <a href="mailto:craftblurdiscord@gmail.com">Email</a>. 👋</p>
+                            <li><b>Email :</b>&nbsp; <a href="mailto:craftblurdiscord@gmail.com" style="color: #05caf7;">shekhersaksham@gmail.com</a></li>
+                            <li><b>Developer : </b>&nbsp; <a href="https://discord.com/users/588336437011939341" style="color: #05caf7;"> Server Developer#9447</a></li>
                         </div>
                     </div> 
   </section>
 
         <footer class="footer">
             <div class="container">
-                <span class="copyright">© 2021 Saksham Shekher.</span>
+                <span class="copyright">© 2021 Duck Dev.</span>
             </div>
         </footer>
 
