🌋🕌 Checkpoint ./.glitch-assets:31916058/377 ./index.html:31916058/352

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="container">
 
             <nav class="navbar navbar-expand-lg navbar-dark">
-                <a class="navbar-brand" href="#"><img src="images/logo.svg" alt="Saksham" width="150px" /></a> <button aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNavDropdown" data-toggle="collapse"
+                <a class="navbar-brand" href="#"><img src="https://cdn.glitch.me/2a4d780f-b9e8-4739-9886-831c1d5fcdb0%2FPicture1.png?v=1633416763148" width="150px" /></a> <button aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNavDropdown" data-toggle="collapse"
                     type="button"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav ml-auto scrollspy">
