--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <li class="nav-item"><a href="#services" class="nav-link">Services</a></li>
                         <li class="nav-item"><a href="#experience" class="nav-link">Experience</a></li>
                         <!-- <li class="nav-item"><a href="#works" class="nav-link">Works</a></li>-->
-                        <li class="nav-item"><a href="#blog" class="nav-link">Posts</a></li>
+                        <!-- <li class="nav-item"><a href="#blog" class="nav-link">Posts</a></li>-->
                         <li class="nav-item"><a href="#contact" class="nav-link">Meet Me</a></li>
                     </ul>
                 </div>
@@ -100,7 +100,7 @@
                 <!-- intro -->
                 <div class="intro">
                     <!-- avatar image -->
-                    <img src="images/avatar-1.svg" alt="Avishkar Patil" class="mb-4" />
+                    <img src="https://cdn.glitch.me/2a4d780f-b9e8-4739-9886-831c1d5fcdb0%2Fhalloween%20overlay.png?v=1633416424642" alt="EW" class="mb-4" />
 
                     <!-- info -->
                     <h1 class="mb-2 mt-0">Duck Dev</h1>
@@ -175,7 +175,7 @@
                     <div class="col-md-3">
                         <div class="text-center text-md-left">
                             <!-- avatar image -->
-                            <img src="images/avatar-2.svg" alt="Saksham Shekher" />
+                            <img src="https://cdn.glitch.me/2a4d780f-b9e8-4739-9886-831c1d5fcdb0%2Fhalloween%20overlay.png?v=1633416424642" alt="E" />
                         </div>
                         <div class="spacer d-md-none d-lg-none" data-height="30"></div>
                     </div>
@@ -539,8 +539,8 @@
                         <div class="contact-info">
                             <h3 class="wow fadeInUp">Let's talk about coding!</h3>
                             <p class="wow fadeInUp">Send me an <a href="mailto:craftblurdiscord@gmail.com">Email</a>. 👋</p>
-                            <li><b>Email :</b>&nbsp; <a href="mailto:craftblurdiscord@gmail.com" style="color: #05caf7;">shekhersaksham@gmail.com</a></li>
-                            <li><b>Developer : </b>&nbsp; <a href="https://discord.com/users/588336437011939341" style="color: #05caf7;"> Server Developer#9447</a></li>
+                            <li><b>Email :</b>&nbsp; <a href="mailto:craftblurdiscord@gmail.com" style="color: #05caf7;">craftblurdiscord@gmail.com</a></li>
+                            <li><b>Developer :</b>&nbsp; <a href="https://discord.com/users/588336437011939341" style="color: #05caf7;"> Server Developer#9447</a></li>
                         </div>
                     </div> 
   </section>
