📹😜 Checkpoint ./.glitch-assets:31916058/421 ./index.html:31916058/814

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="copyright" content="(C) Duck Dev">
     <meta name="robots" content="all" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="shortcut icon" type="image/x-icon" href="https://cdn.glitch.me/2a4d780f-b9e8-4739-9886-831c1d5fcdb0%2Fhalloween%20overlay.png?v=1633416424642">
+    <link rel="shortcut icon" type="image/x-icon" href="https://cdn.glitch.me/2a4d780f-b9e8-4739-9886-831c1d5fcdb0%2FPicture1.png?v=1633453962022">
   
 
     <!-- STYLESHEETS -->
@@ -106,11 +106,11 @@
                 <!-- intro -->
                 <div class="intro">
                     <!-- avatar image -->
-                    <img src="https://cdn.glitch.me/2a4d780f-b9e8-4739-9886-831c1d5fcdb0%2Fhalloween%20overlay.png?v=1633416424642" alt="EW" class="mb-4" />
+                    <img src="https://cdn.glitch.me/2a4d780f-b9e8-4739-9886-831c1d5fcdb0%2FPicture1.png?v=1633453962022" alt="Avatar" class="mb-4" height="300" width="300" />
 
                     <!-- info -->
                     <h1 class="mb-2 mt-0">Duck Dev</h1>
-                    <span>I'm a <span class="text-rotating">duck., developer., </span></span>
+                    <span>I <span class="text-rotating">love ducks., am a duck., am a developer</span></span>
 
                     <!-- social icons -->
                     <ul class="social-icons light list-inline mb-0 mt-4">
@@ -129,7 +129,7 @@
                 <!-- scroll down mouse wheel -->
                 <div class="scroll-down">
                     <a href="#about" class="mouse-wrapper">
-                        <span>Go down or SUS</span>
+                        <span>Scroll Down</span>
                         <span class="mouse">
 						<span class="wheel"></span>
                         </span>
@@ -181,7 +181,7 @@
                     <div class="col-md-3">
                         <div class="text-center text-md-left">
                             <!-- avatar image -->
-                            <img src="https://cdn.glitch.me/2a4d780f-b9e8-4739-9886-831c1d5fcdb0%2Fhalloween%20overlay.png?v=1633416424642" alt="E" />
+                            <img src="https://cdn.glitch.me/2a4d780f-b9e8-4739-9886-831c1d5fcdb0%2FPicture1.png?v=1633453962022" alt="avatar" />
                         </div>
                         <div class="spacer d-md-none d-lg-none" data-height="30"></div>
                     </div>
