🌟🏦 Checkpoint ./index.html:31916058/289

--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
                     type="button"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav ml-auto scrollspy">
-                        <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-                        <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
-                        <li class="nav-item"><a href="#services" class="nav-link">Services</a></li>
-                        <li class="nav-item"><a href="#experience" class="nav-link">Experience</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#home">Me</a></li>
+                        <li class="nav-item"><a href="#about" class="nav-link">About Me</a></li>
+                        <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
+                        <li class="nav-item"><a href="#lih" class="nav-link">Life is Hard!!!</a></li>
                         <!-- <li class="nav-item"><a href="#works" class="nav-link">Works</a></li>-->
                         <!-- <li class="nav-item"><a href="#blog" class="nav-link">Posts</a></li>-->
-                        <li class="nav-item"><a href="#contact" class="nav-link">Meet Me</a></li>
+                        <li class="nav-item"><a href="#git" class="nav-link">Get In Touch</a></li>
                     </ul>
                 </div>
             </nav>
@@ -202,10 +202,10 @@
                                     <div class="skill-item">
                                         <div class="skill-info clearfix">
                                             <h4 class="float-left mb-3 mt-0">API fixation</h4>
-                                            <span class="float-right">69%</span>
+                                            <span class="float-right">83%</span>
                                         </div>
                                         <div class="progress">
-                                            <div class="progress-bar data-background" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="69" data-color="#FF0000" style="background-color: #fbb034; background-image: linear-gradient(315deg, #ff9900 0%, #ffee20 74%);">
+                                            <div class="progress-bar data-background" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="83" data-color="#FF0000" style="background-color: #fbb034; background-image: linear-gradient(315deg, #ff9900 0%, #ffee20 74%);">
                                             </div>
                                         </div>
                                         <div class="spacer" data-height="20"></div>
@@ -291,7 +291,7 @@
         </section>
 
         <!-- section services -->
-        <section id="services">
+        <section id="projects">
 
             <div class="container">
 
@@ -345,7 +345,7 @@
         </section>
 
         <!-- section experience -->
-        <section id="experience">
+        <section id="lih">
 
             <div class="container">
 
@@ -529,7 +529,7 @@
                 </div> -->
 
         <!-- section contact -->
-        <section id="contact">
+        <section id="git">
 
             <div class="container">
 
