☺️❄️ Checkpoint ./index.html:31916058/130

--- a/index.html
+++ b/index.html
@@ -5,12 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Duck Dev | Developing for the future</title>
     <meta name="description" content="I am a 15 year old teen with coding skills. Created an API, 2 discord bots, websites.">
-    <meta name="author" content="Server Developer">
   <meta property="og:site_name" content="Server Developer" />
-  <meta
-      property="og:image"
-      content="https://cdn.discordapp.com/avatars/588336437011939341/f656fe479f8f44c8fc06b2a4139a51ca.png"
-    />
+  <meta property="og:image" content="https://cdn.discordapp.com/avatars/588336437011939341/f656fe479f8f44c8fc06b2a4139a51ca.png">
   <meta property="theme-color" content="#FF0000" />
     <meta name="copyright" content="(C) Duck Dev">
     <meta name="robots" content="all" />
