--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="copyright" content="(C) Duck Dev">
     <meta name="robots" content="all" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="shortcut icon" type="image/x-icon" href="https://cdn.glitch.me/2a4d780f-b9e8-4739-9886-831c1d5fcdb0%2FPicture1.png?v=1633453962022">
+    <link rel="shortcut icon" type="image/x-icon" href="https://cdn.glitch.me/2a4d780f-b9e8-4739-9886-831c1d5fcdb0%2FPicture1.png?v=1633772049771">
   
 
     <!-- STYLESHEETS -->
@@ -73,7 +73,7 @@
         <div class="container">
 
             <nav class="navbar navbar-expand-lg navbar-dark">
-                <a class="navbar-brand" href="#"><img src="https://cdn.glitch.me/2a4d780f-b9e8-4739-9886-831c1d5fcdb0%2FPicture1.png?v=1633455241960" width="150px" /></a> <button aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNavDropdown" data-toggle="collapse"
+                <a class="navbar-brand" href="#"><img src="https://cdn.discordapp.com/attachments/623858565320409098/896329944710393877/2a4d780f-b9e8-4739-9886-831c1d5fcdb02FPicture1.png" width="150px" /></a> <button aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNavDropdown" data-toggle="collapse"
                     type="button"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav ml-auto scrollspy">
@@ -102,7 +102,7 @@
                 <!-- intro -->
                 <div class="intro">
                     <!-- avatar image -->
-                    <img src="https://cdn.glitch.me/2a4d780f-b9e8-4739-9886-831c1d5fcdb0%2FPicture1.png?v=1633453962022" alt="Avatar" class="mb-4" height="300" width="300" />
+                    <img src="https://cdn.glitch.me/2a4d780f-b9e8-4739-9886-831c1d5fcdb0%2FPicture1.png?v=1633772049771" alt="Avatar" class="mb-4" height="300" width="300" />
 
                     <!-- info -->
                     <h1 class="mb-2 mt-0">Duck Dev</h1>
@@ -177,7 +177,7 @@
                     <div class="col-md-3">
                         <div class="text-center text-md-left">
                             <!-- avatar image -->
-                            <img src="https://cdn.glitch.me/2a4d780f-b9e8-4739-9886-831c1d5fcdb0%2FPicture1.png?v=1633453962022" alt="avatar" />
+                            <img src="https://cdn.glitch.me/2a4d780f-b9e8-4739-9886-831c1d5fcdb0%2FPicture1.png?v=1633772049771" alt="avatar" />
                         </div>
                         <div class="spacer d-md-none d-lg-none" data-height="30"></div>
                     </div>
