🎳🏫 Checkpoint ./index.html:31916058/960

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Duck Dev | Developing for the future</title>
-    <meta name="description" content="I am a 15 year old teen with coding skills. Created an API, 2 discord bots, websites.">
+  <meta property="og:type" content="website" />
+    <meta property="og:description" content="I am a 15 year old teen with coding skills. Created an API, 2 discord bots, websites.">
   <meta property="og:site_name" content="Server Developer" />
-  <meta property="og:image" content="https://cdn.discordapp.com/avatars/588336437011939341/f656fe479f8f44c8fc06b2a4139a51ca.png">
-  <meta property="theme-color" content="#FF0000" />
+  <meta property="og:title" content="Soumalya Ghosh" />
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="og:image" content="https://cdn.glitch.me/2a4d780f-b9e8-4739-9886-831c1d5fcdb0%2FPicture1.png?v=1633772049771">
+  <meta property="theme-color" data-react-helmet="true" content="#FF0000" />
     <meta name="copyright" content="(C) Duck Dev">
     <meta name="robots" content="all" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
