--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   <meta property="og:type" content="website" />
     <meta property="og:description" content="I am a 15 year old teen with coding skills. Created an API, 2 discord bots, websites.">
   <meta property="og:site_name" content="Server Developer" />
-  <meta property="og:title" content="Soumalya Ghosh" />
+  <meta property="og:title" content="Duck Dev | Developing For The Future" />
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="og:image" content="https://cdn.glitch.me/2a4d780f-b9e8-4739-9886-831c1d5fcdb0%2FPicture1.png?v=1633772049771">
+  <meta property="og:image" content="https://cdn.discordapp.com/attachments/870675064863981578/898979752763850772/unknown.png">
   <meta property="theme-color" data-react-helmet="true" content="#FF0000" />
     <meta name="copyright" content="(C) Duck Dev">
     <meta name="robots" content="all" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="https://cdn.glitch.me/2a4d780f-b9e8-4739-9886-831c1d5fcdb0%2FPicture1.png?v=1633772049771">
-  
+  <link type="application/json+oembed" href="https://duck.is-a.dev/oembed.json" />
 
     <!-- STYLESHEETS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
