--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 </head>
 
-<body class="dark">
+<body class="dark" oncontextmenu="return false">
 
     <!-- Preloader -->
     <div id="preloader">
