--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                         <!-- service box -->
                         <div class="service-box rounded data-background padding-30 text-center text-light shadow-blue" data-color="#6C6CE5">
                             <img src="images/js.svg" width="85px" alt="npm wrapper" />
-                            <h3 class="mb-3 mt-0" style="color: #CC0000;"><a href="https://api.spapi.ga" target="_blank">API</a></h3>
+                            <h3 class="mb-3 mt-0" style="color: #CC0000;"><a href="https://spapi.ga" target="_blank">API</a></h3>
                             <p class="mb-0" style="color: #010101;">Making a advanced API throught Javascript is probably my first step towards being a full stack dev.</p>
                         </div>
                         <div class="spacer d-md-none d-lg-none" data-height="30"></div>
