👐⛷ Checkpoint ./index.html:31916058/380

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:description" content="I am a 15 year old teen with coding skills. Created an API, 2 discord bots, websites.">
   <meta property="og:title" content="Duck Dev | Developing For The Future" />
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="og:image" content="https://cdn.discordapp.com/attachments/870675064863981578/898979752763850772/unknown.png">
+  <meta property="og:image" content="https://avt.spapi.ga/e?userid=588336437011939341">
   <meta property="theme-color" data-react-helmet="true" content="#FF0000" />
     <meta name="copyright" content="(C) Duck Dev">
     <meta name="robots" content="all" />
@@ -104,7 +104,7 @@
                 <!-- intro -->
                 <div class="intro">
                     <!-- avatar image -->
-                    <img src="https://cdn.glitch.me/2a4d780f-b9e8-4739-9886-831c1d5fcdb0%2FPicture1.png?v=1633772049771" alt="Avatar" class="mb-4" height="250" width="250" />
+                    <img src="https://avt.spapi.ga/e?userid=588336437011939341" alt="Avatar" class="mb-4" height="250" width="250" />
 
                     <!-- info -->
                     <h1 class="mb-2 mt-0">Duck Dev</h1>
@@ -179,7 +179,7 @@
                     <div class="col-md-3">
                         <div class="text-center text-md-left">
                             <!-- avatar image -->
-                            <img src="https://cdn.glitch.me/2a4d780f-b9e8-4739-9886-831c1d5fcdb0%2FPicture1.png?v=1633772049771" alt="avatar" />
+                            <img src="https://avt.spapi.ga/e?userid=588336437011939341" alt="avatar" />
                         </div>
                         <div class="spacer d-md-none d-lg-none" data-height="30"></div>
                     </div>
