--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="copyright" content="(C) Duck Dev">
     <meta name="robots" content="all" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="shortcut icon" type="image/x-icon" href="https://cdn.glitch.me/2a4d780f-b9e8-4739-9886-831c1d5fcdb0%2FPicture1.png?v=1633772049771">
+    <link rel="shortcut icon" type="image/x-icon" href="https://avt.spapi.ga/e?userid=588336437011939341">
   <link type="application/json+oembed" href="https://duck.is-a.dev/oembed.json" />
 
     <!-- STYLESHEETS -->
