--- a/index.html
+++ b/index.html
@@ -331,6 +331,24 @@
                             <p class="mb-0" style="color: #010101;">I love Web developing since I was 13. I love HTML and CSS. I am thinking of being more advanced by learning SCSS.</p>
                         </div>
                     </div>
+          
+                    <div class="col-md-4">
+                        <!-- service box -->
+                        <div class="service-box rounded data-background padding-30 text-center shadow-red" data-color="#5865F2">
+                            <img src="https://avt.spapi.ga/e?userid=588336437011939341" alt="CDN" height="100" width="100" />
+                            <h3 class="mb-3 mt-0" style="color: #ff0000;"><a href="https://cdn.spapi.ga" target="_blank">CDN</a></h3>
+                            <p class="mb-0" style="color: #010101;">My own CDN with some random memes.</p>
+                        </div>
+                    </div>
+          
+                    <div class="col-md-4">
+                        <!-- service box -->
+                        <div class="service-box rounded data-background padding-30 text-center shadow-red" data-color="#5865F2">
+                            <img src="" alt="CDN" height="100" width="100" />
+                            <h3 class="mb-3 mt-0" style="color: #ff0000;"><a href="https://cdn.spapi.ga" target="_blank">CDN</a></h3>
+                            <p class="mb-0" style="color: #010101;">My own CDN with some random memes.</p>
+                        </div>
+                    </div>
 
                 </div>
 
