🎈🙋 Checkpoint ./index.html:31916058/277 ./css/style.css:31916058/96

--- a/index.html
+++ b/index.html
@@ -343,9 +343,9 @@
           
                     <div class="col-md-4">
                         <!-- service box -->
-                        <div class="service-box rounded data-background padding-30 text-center shadow-red" data-color="#5865F2">
-                            <img src="" alt="CDN" height="100" width="100" />
-                            <h3 class="mb-3 mt-0" style="color: #ff0000;"><a href="https://cdn.spapi.ga" target="_blank">CDN</a></h3>
+                        <div class="service-box rounded data-background padding-30 text-center shadow-blue" data-color="#ff6257">
+                            <img src="https://cdn.glitch.me/2a4d780f-b9e8-4739-9886-831c1d5fcdb0%2Fpngaaa.com-112249.png?v=1638016765488" alt="CDN" height="100" width="100" />
+                            <h3 class="mb-3 mt-0" style="color: #00ff00;"><a href="https://dl.spapi.ga" target="_blank">Youtube Video Downloader</a></h3>
                             <p class="mb-0" style="color: #010101;">My own CDN with some random memes.</p>
                         </div>
                     </div>
