--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                         <div class="service-box rounded data-background padding-30 text-center shadow-blue" data-color="#ff6257">
                             <img src="https://cdn.glitch.me/2a4d780f-b9e8-4739-9886-831c1d5fcdb0%2Fpngaaa.com-112249.png?v=1638016765488" alt="CDN" height="100" width="100" />
                             <h3 class="mb-3 mt-0" style="color: #00ff00;"><a href="https://dl.spapi.ga" target="_blank">Youtube Video Downloader</a></h3>
-                            <p class="mb-0" style="color: #010101;">My own CDN with some random memes.</p>
+                            <p class="mb-0" style="color: #010101;">A simple YouTube Videos Downloader.</p>
                         </div>
                     </div>
 
