--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@ html:after {
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+  
+  <script src="myscript.js"></script>
 </head>
   
 <body class="dark" oncontextmenu="return false">
@@ -222,11 +224,11 @@ html:after {
                                     <!-- skill item -->
                                     <div class="skill-item">
                                         <div class="skill-info clearfix">
-                                            <h4 class="float-left mb-3 mt-0">API fixation</h4>
-                                            <span class="float-right">83%</span>
+                                            <h4 class="float-left mb-3 mt-0">Your battery</h4>
+                                            <span class="float-right" id="batr-pgr">0%</span>
                                         </div>
                                         <div class="progress">
-                                            <div class="progress-bar data-background" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="83" data-color="#FF0000" style="background-color: #fbb034; background-image: linear-gradient(315deg, #ff9900 0%, #ffee20 74%);">
+                                            <div class="progress-bar data-background" id="battery" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="83" data-color="#FF0000" style="background-color: #fbb034; background-image: linear-gradient(315deg, #ff9900 0%, #ffee20 74%);">
                                             </div>
                                         </div>
                                         <div class="spacer" data-height="20"></div>
